Changed vmarg for unit tests